preview-nav-buttons: Break a reference cycle

PreviewView is supposed to own PreviewNavButtons. Therefore, the latter
shouldn't hold a reference on the former.

https://bugzilla.gnome.org/show_bug.cgi?id=746940